syntax = "proto3";

package payment;


service PaymentService {
    rpc ProcessPayment(PaymentRequest) returns (PaymentResponse) {}
}

message PaymentRequest {
    int32 order_id = 1;
    double amount = 2;
}

message PaymentResponse {
    bool success = 1;
    string message = 2;
}